Fixed negative margin on login box so whole box shows on mobile

--- a/cas-server-cc/src/main/webapp/css/login.css
+++ b/cas-server-cc/src/main/webapp/css/login.css
@@ -112,7 +112,7 @@ header img{
 .box{
 	background-color: #fff;
 	box-shadow: 0 0 10px #222;
-	margin-top: -200px;
+	margin-top: 0px;
 	margin-left: -175px;
 	padding: 10px 10px 0 10px;
 	position: absolute;
