--- a/cas-server-cc/src/main/webapp/css/slideshow.css
+++ b/cas-server-cc/src/main/webapp/css/slideshow.css
@@ -18,7 +18,7 @@ only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5) {
 
 .slidesplash li:nth-child(1),li:nth-child(2),li:nth-child(3),li:nth-child(4),li:nth-child(5) span{
-	background:red;	
+	background:#013060;	
 }
 
 }
